# Glass

./: .gitignore  CLAUDE.md  Cargo.toml  Cross. toml  README.md  rust-toolchain.toml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  main.yml
crates/glass-api/: Cargo.toml
crates/glass-api/src/: annotations.rs  bin_search.rs  bundle.rs  cfg.rs  dex.rs  disasm.rs  export.rs  insn_cursor.rs  insn_matcher.rs  insn_pattern.rs  insn_pattern_armv7.rs  insn_variants.rs  inspect.rs  lib.rs  patch_file.rs  scripts.rs  search.rs  skills.rs  strings.rs  symbols.rs  types.rs  xref.rs
crates/glass-api/src/insn_pattern/: aarch64.rs  armv7.rs  armv7_format_codes.rs  armv7_tests.rs  mod.rs  shared.rs
crates/glass-arch-arm/: Cargo.toml
crates/glass-arch-arm/src/: arm_format.rs  cfg.rs  disasm.rs  facade.rs  format.rs  lib.rs  objc_format.rs  swift_format.rs  symbol_map.rs
crates/glass-arch-arm/tests/: armv7_smoke.rs
crates/glass-arch-arm64/: Cargo.toml
crates/glass-arch-arm64/src/: cfg.rs  format.rs  lib.rs  macho_fat.rs  symbol_map.rs
crates/glass-arch-dex/: Cargo.toml
crates/glass-arch-dex/src/: lib.rs
crates/glass-cli/: Cargo.toml  build.rs
crates/glass-cli/src/: main.rs  output.rs  scripts_verbs.rs  verbs.rs
crates/glass-core/: Cargo.toml
crates/glass-core/src/: lib.rs
crates/glass-db/: Cargo.toml
crates/glass-db/src/: ids.rs  lib.rs  schema.rs  store.rs
crates/glass-device/: Cargo.toml
crates/glass-device/src/: adb.rs  idevice.rs  lib.rs  path.rs
crates/glass-frida/: Cargo.toml  build.rs
crates/glass-frida/assets/: frida-java-bridge.js
crates/glass-frida/src/: gadgets.rs  glib_ffi.rs  injection.rs  lib.rs  patch.rs  server.rs  session.rs  sign.rs  stalker_js.rs  trace_js.rs
crates/glass-mcp/: Cargo.toml
crates/glass-mcp/src/: dispatch.rs  lib.rs  state.rs
crates/glass-mobile/: Cargo.toml
crates/glass-mobile/src/: ipa.rs  lib.rs
crates/glass-script/: Cargo.toml
crates/glass-script/src/: lib.rs
crates/glass-ui/: Cargo.toml  build.rs
crates/glass-ui/src/: about.rs  about_panes.rs  annotation_editor.rs  annotation_popover.rs  annotations.rs  annotations_pane.rs  app.rs  app_menu.rs  cfg_block.rs  cfg_edge.rs  cfg_render.rs  changes_dialog.rs  checkbox.rs  class_decl_popover.rs  code_editor.rs  colour_picker.rs  context_menu.rs  context_menus.rs  copy.rs  coverage_actions.rs  coverage_view.rs  debug_dock.rs  device_picker.rs  dex_callgraph.rs  dex_cg_render.rs  editor.rs  edits.rs  external_editor.rs  field_popover.rs  frida_dock.rs  frida_hooks.rs  frida_inject.rs  frida_server_install.rs  graph.rs  graph_canvas.rs  hex.rs  hooks.rs  hooks_dialog.rs  icons.rs  injection_dialog.rs  (+40 more)
docs/: AutomationAPI.md  BinSearch.md  InsnPattern.md  Roadmap.md  Themes.md  cli-api.md
docs/themes/: deep-blue.json  glass-dark.json  sepia.json
packaging/: Glass.icns  Info.plist  build-release.sh  make-app.sh  make-dmg.sh  make-icns.sh  update-frida-gadgets.sh
