[workspace]
resolver = "2"
members = [
    "crates/glass-core",
    "crates/glass-arch-arm64",
    "crates/glass-arch-dex",
    "crates/glass-mobile",
    "crates/glass-db",
    "crates/glass-api",
    "crates/glass-mcp",
    "crates/glass-ui",
    "crates/glass-script",
    "crates/glass-cli",
]

[workspace.package]
version = "0.4.2"
edition = "2021"
rust-version = "1.85"
license = "GPL-3.0-only"
authors = ["Andrew Whaley <azwhaley@gmail.com>"]
repository = "https://github.com/azw413/glass"

# Workspace-wide clippy config. The lints turned off here are
# either deliberate design choices we don't want to fight or
# stylistic preferences we disagree with:
#
#   - too_many_arguments: many render fns take 6+ colour/context
#     params on purpose; bundling them would obscure call sites.
#   - if_same_then_else: appears in a few legitimate fall-throughs
#     where the two paths happen to compile to the same body.
#   - arc_with_non_send_sync: gpui callbacks are single-threaded;
#     Arc-of-non-Send is correct in our use.
#   - empty_line_after_doc_comment / empty_line_after_outer_attr /
#     doc_lazy_continuation: cosmetic, doesn't affect generated docs.
#   - needless_range_loop: index-into-bytes loops where the index
#     is meaningful (instruction offsets, etc.) are clearer the
#     existing way.
#   - result_large_err: the Result<LoadedBundle> error path is rare;
#     boxing it would cost the happy path.
[workspace.lints.clippy]
too_many_arguments = "allow"
if_same_then_else = "allow"
arc_with_non_send_sync = "allow"
needless_range_loop = "allow"
result_large_err = "allow"
large_enum_variant = "allow"

[workspace.lints.rust]
# objc's class!/msg_send! macros expand to #[cfg(feature = "cargo-clippy")]
# internally — declare that value as expected so we don't drown in
# unexpected_cfgs warnings whenever clippy runs.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[workspace.dependencies]
# Disassembly + binary loading (handles ELF + Mach-O internally via `object`)
armv8-encode = { git = "https://github.com/azw413/armv8-encode", rev = "83806e6a654c5a11e11a00095114ead0e1fd8132" }
# Android: APK / DEX / smali. GPL-3.0-only — propagates to the whole workspace.
smali = { git = "https://github.com/azw413/smali" }
# UI framework. gpui is publish=false so git-dep only. Pinned to a Zed
# commit known to compile cleanly — bump deliberately, not on a whim.
gpui = { git = "https://github.com/zed-industries/zed", rev = "700b0b5de6b1101fbe699f714888d1b68680cb0f" }
# `font-kit` makes gpui_macos render text correctly (see memory:
# feedback-gpui-font-kit). `wayland` + `x11` only forward into
# gpui_linux, which is target-gated to Linux/FreeBSD inside
# gpui_platform — they're inert on macOS. Without one of them the
# Linux build panics with `unreachable!()` in `current_platform`
# at first window creation.
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "700b0b5de6b1101fbe699f714888d1b68680cb0f", features = ["font-kit", "wayland", "x11"] }

# Errors / logging / serde used across crates
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Concurrency
parking_lot = "0.12"
rayon = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Persistence (chosen later in M2; pinning crate now to lock the choice)
redb = "2"

# IPA pipeline: unzip + binary plist parsing.
zip = { version = "2", default-features = false, features = ["deflate"] }
plist = "1"

# Scripting (M3)
rquickjs = { version = "0.11", features = ["loader", "futures"] }

# Internal
glass-core = { path = "crates/glass-core" }
glass-arch-arm64 = { path = "crates/glass-arch-arm64" }
glass-arch-dex = { path = "crates/glass-arch-dex" }
glass-mobile = { path = "crates/glass-mobile" }
glass-api = { path = "crates/glass-api" }
glass-mcp = { path = "crates/glass-mcp" }
glass-ui = { path = "crates/glass-ui" }
glass-db = { path = "crates/glass-db" }
glass-script = { path = "crates/glass-script" }

[profile.release]
lto = "thin"
codegen-units = 1
