[package]
name = "glass-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
glass-core.workspace = true
glass-db.workspace = true
glass-arch-arm64.workspace = true
glass-arch-dex.workspace = true
glass-mobile.workspace = true
armv8-encode.workspace = true
smali.workspace = true
plist.workspace = true
parking_lot.workspace = true
blake3 = { version = "1", features = ["rayon"] }

[lints]
workspace = true
