[package]
name = "glass-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
redb.workspace = true
blake3 = { version = "1", features = ["rayon"] }
dirs = "5"
tracing.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
