[package]
name = "glass-frida"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Host-side Frida driver for Glass. Wraps the `frida` crate so the rest of the workspace doesn't need to know about its devkit build-time requirement."

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
glass-device.workspace = true
smali.workspace = true
serde_json = "1"
# HTTP fetch + pure-Rust xz decompression — used by the
# frida-server installer to download release tarballs.
ureq = "2"
lzma-rs = "0.3"
dirs = "5"

# Frida bindings. `auto-download` saves the user from manually
# staging the devkit; the frida-sys build.rs handles platform
# detection and downloads the matching `frida-core-devkit`
# tarball on first build (~30MB, cached in `target/` after).
# Frida is an essential capability for Glass — no feature flag,
# always linked.
frida = { version = "0.17", features = ["auto-download"] }
frida-sys = "0.17"

[dev-dependencies]
tempfile = "3"

# Linux: resolve the system glib/gobject link flags so our
# hand-rolled GLib FFI (src/glib_ffi.rs) links. Left
# unconditional (not target-gated) so cross-compiling to Linux
# from another host still has the crate available to build.rs.
[build-dependencies]
pkg-config = "0.3"
