[package]
name = "glass-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
glass-api.workspace = true
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt", "io-std", "io-util", "signal", "sync"] }
rust-mcp-sdk = { version = "0.9", default-features = false, features = ["server", "macros", "stdio"] }

[lints]
workspace = true
