[package]
name = "glass-mobile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
smali.workspace = true
glass-arch-arm64.workspace = true
glass-arch-dex.workspace = true
