[package]
name = "glass-mobile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true }
smali.workspace = true
zip.workspace = true
plist.workspace = true
glass-arch-arm.workspace = true
glass-arch-dex.workspace = true

[lints]
workspace = true
