[package]
name = "glass-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
glass-core.workspace = true
glass-db.workspace = true
glass-api.workspace = true
glass-arch-arm.workspace = true
glass-arch-dex.workspace = true
glass-mobile.workspace = true
glass-device.workspace = true
glass-frida.workspace = true
armv8-encode.workspace = true
smali.workspace = true
blake3 = { version = "1", features = ["rayon"] }
parking_lot.workspace = true
plist.workspace = true
gpui.workspace = true
gpui_platform.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[dev-dependencies]
tempfile = "3"

[features]
# Forward the `frida` feature on to glass-frida. Off by default
# so workspace dev builds skip the devkit download; enabled in
# release builds via `--features frida`.
default = []
frida = ["glass-frida/frida"]

[lints]
workspace = true
